# ufcpredictor

./: .coveragerc  .gitignore  404.html  CHANGELOG.md  Dockerfile  README.md  app.py  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: huggingface.yml  mkdocs  mkdocs.yml  mypy.yml  (+1 more)
docs/: index.md
models/: model.pth
notebooks/: ELO_rating.py  bble_check_model.py  bble_status_predict_test.py  compare_models.py  create_fighter_transformer_data.py  custom_weight_train.py  full_prediction.py  full_prediction_no_odds.py  full_prediction_probability_instead_of_odds.py  full_prediction_single_odd.py  full_prediction_single_odd_23_and_24.py  model.pth  modular_predictor.py  modular_predictor_var1.1.py  modular_predictor_var1.1_OSR.py  modular_predictor_var1.1_OSR_2_train_phases.py  modular_predictor_var1.1_OSR_2_train_phases_no_train_contamination.py  modular_predictor_var1.py  nomodules.py  predict_bet.py  predict_using_odds.py  prediction_vs_odds.py  prepare_data.py  results_2024-with-odds.html  results_2024-with-odds.py  results_2024-without-odds.html  results_2024-without-odds.py  results_23-24-with-odds.html  results_23-24-with-odds.py  results_23-24-without-odds.html  results_23-24-without-odds.py  symmetric_network.py  symmetric_network_pred_2024.py  symmetric_network_pred_2024_old.py  train_by_weight.py  train_model.py
ufcpredictor/: app.py  data_aggregator.py  data_enhancers.py  data_processor.py  datasets.py  extra_fields.py  loss_functions.py  models.py  networks.py  plot_tools.py  train_methods.py  trainer.py  utils.py  win_predictor.py
(+20 files in other folders)
