[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ufcpredictor"]

[tool.setuptools.dynamic]
version = {attr = "ufcpredictor.__version__"}

[project]
name = "ufcpredictor"
readme = "README.md"
requires-python = ">=3.9.13"
dynamic = ["version"]
dependencies = [
    "fuzzywuzzy",
    "gradio",
    "matplotlib",
    "scikit_learn",
    "torch",
    "tqdm",
]

